# climatology_py_dash

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NERACOOS Climatology.py  README.md  Readme.md  app.py  by_platform.py  by_standard_name.py  calculate_datums.py  climatology.py  common.py  docker-compose.yml  pixi.toml  pyproject.toml  renovate.json  root.py  style.css
.github/workflows/: dump_event.yml  pre-commit.yml  push.yml
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
layouts/: NERACOOS Climatology.grid.json
tests/e2e/: conftest.py  helpers.py  test_by_platform.py  test_by_standard_name.py  test_climatology.py  test_pages.py
