[project]
name = "climatology-py-dash"
version = "0.1.0"

description = "Add a short description here"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "tadc @ git+https://github.com/NOAA-CO-OPS/CO-OPS-Tidal-Analysis-Datum-Calculator.git@v2.2.0?rev_type=tag",
]

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "osx-arm64", "linux-64" ]

[tool.pixi.tasks]
edit = "marimo edit"
app = "marimo run climatology.py"
# serve = "marimo run climatology.py --host 0.0.0.0 -p 8080 --base-url /climatology"
serve = "python app.py"

[tool.pixi.dependencies]
erddapy = ">=2.2.4,<3"
xarray = ">=2025.4.0,<2026"
marimo = ">=0.14,<0.15"
altair = ">=6,<7"
pillow = ">=12,<13"
numpy = "<2.3.6"
libgfortran5 = "!=13.2.0"
python = ">=1.13"
vegafusion = ">=2.0.2,<3"
vegafusion-python-embed = ">=1.6.9,<2"
vl-convert-python = ">=1.7.0,<2"
pyarrow = ">=22,<23"
fastapi = ">=0.123.4,<0.124"
uvicorn = ">=0.38,<0.39"
matplotlib-base = ">=3.10.8,<4"
scipy = ">=1.15.2,<2"
requests = ">=2.32.5,<3"

[tool.marimo.display]
custom_css = [ "style.css" ]
