[project]
name = "climatology-py-dash"
version = "0.1.0"
description = "Add a short description here"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "tadc @ git+https://github.com/NOAA-CO-OPS/CO-OPS-Tidal-Analysis-Datum-Calculator.git@v2.2.0?rev_type=tag",
]

[tool.pixi.dependencies]
erddapy = ">=3.2.1,<4"
xarray = ">=2025.4.0,<2026"
marimo = ">=0.14,<0.15"
altair = ">=6,<7"
pillow = ">=12,<13"
numpy = "<2.3.6"
libgfortran5 = "!=13.2.0"
python = ">=1.13"
vegafusion = ">=2.0.2,<3"
vegafusion-python-embed = ">=1.6.9,<2"
vl-convert-python = ">=1.7.0,<2"
pyarrow = ">=22,<23"
fastapi = ">=0.123.4,<0.124"
uvicorn = ">=0.38,<0.39"
matplotlib-base = ">=3.10.8,<4"
scipy = ">=1.15.2,<2"
requests = ">=2.32.5,<3"

[tool.pixi.environments]
test = { features = [ "test" ], solve-group = "default" }

[tool.pixi.feature.test.dependencies]
pytest = ">=9"
pytest-playwright = ">=0.7,<1"
# driver must match playwright-python; exclude-newer can split the pair
playwright = ">=1.49,<1.61"

[tool.pixi.feature.test.tasks]
e2e = "pytest tests/e2e --browser chromium --screenshot only-on-failure --tracing retain-on-failure"
e2e-install = "playwright install chromium"
e2e-docker = "E2E_BASE_URL=http://localhost:8080 pixi run e2e"
e2e-browser = "pixi run e2e --headed"
e2e-codegen = "playwright codegen"

[tool.pixi.feature.test.tasks.e2e-trace]
args = [ "trace_path" ]
cmd = "playwright show-trace {{trace_path}}"

[tool.pixi.tasks]
edit = "marimo edit"
app = "marimo run climatology.py"
# serve = "marimo run climatology.py --host 0.0.0.0 -p 8080 --base-url /climatology"
serve = "python app.py"

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-arm64" ]
exclude-newer = "7d"

[tool.pyproject-fmt]
table_format = "long"
sub_table_spacing = "\n"

[tool.pytest]
addopts = [ "--verbose" ]

[tool.marimo.display]
custom_css = [ "style.css" ]
